--- a/css/agency.css
+++ b/css/agency.css
@@ -1,4 +1,4 @@
-﻿@font-face {
+@font-face {
   font-family: "Tradegothic LT Condeighteen Bold";
   src: url("../fonts/trade_gothic/trade-gothic-lt-condensed-no-18.ttf");
   font-weight: bold;
@@ -105,10 +105,11 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 30px;
-  padding: 24px 112px;
   border-radius: 0;
-  line-height: 1;
-  width: 300px; }
+  line-height: 80px;
+  width: 300px;
+  height: 80px;
+  padding: 0; }
   .btn-xl:focus, .btn-xl.focus {
     color: white;
     background-color: #b96106;
@@ -147,12 +148,15 @@ h1, h2, h3, h4, h5, h6 {
   border-color: transparent; }
   .navbar-custom .navbar-brand {
     color: #348fce;
-    width: 250px;
-    height: 60px;
     overflow: hidden;
     padding-top: 0;
     padding-bottom: 0;
     margin: 15px 0;
+    display: inline-block;
+    width: 237px;
+    height: 58px;
+    background-repeat: no-repeat;
+    background-position: 0px 0px;
     font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive; }
     .navbar-custom .navbar-brand:hover, .navbar-custom .navbar-brand:focus, .navbar-custom .navbar-brand:active, .navbar-custom .navbar-brand.active {
       color: #2873a7; }
@@ -203,14 +207,31 @@ h1, h2, h3, h4, h5, h6 {
       transition: all 0.3s; }
     .navbar-custom .navbar-nav > li > a {
       padding: 35px 0 15px 0;
-      margin: 0 25px; }
+      margin: 0 20px; }
     .navbar-custom .navbar-nav > .active > a {
       border-radius: 3px; } }
+
+@media (min-width: 992px) and (max-width: 1141px) {
+  .navbar-custom {
+    padding: 36px 55px 0 55px; } }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .navbar-custom {
+    padding-left: 15px;
+    padding-right: 15px; }
+    .navbar-custom .navbar-brand {
+      background-size: 390px;
+      width: 168px;
+      height: 42px;
+      font-size: 2em;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      transition: all 0.3s; } }
 
 @media (min-width: 768px) {
   .navbar-custom.affix {
     background-color: #222222;
-    padding: 10px 0; }
+    padding: 10px; }
     .navbar-custom.affix .navbar-brand {
       font-size: 1.5em; } }
 
@@ -320,8 +341,7 @@ section {
     margin-top: 70px;
     background: #383330;
     border-color: #383330 !important;
-    line-height: 1;
-    padding: 24px 34px; }
+    line-height: 80px; }
 
 .service-heading {
   margin: 15px 0;
@@ -1317,8 +1337,7 @@ body {
   .b-popup-content a {
     left: 87%; }
   .btn-xl {
-    font-size: 20px;
-    padding: 10px 30px; }
+    font-size: 20px; }
   .intro-text {
     margin-top: 150px; }
   .intro-lead-in {
@@ -1414,7 +1433,10 @@ body {
   .form_welcome {
     margin-top: 20px; }
   .navbar-custom .navbar-brand {
-    height: 70px; }
+    height: 70px;
+    background-size: 390px;
+    width: 168px;
+    height: 42px; }
   .navbar-brand img {
     margin-top: 0 !important; }
   .b-popup-content video {
@@ -1434,7 +1456,13 @@ body {
   .b-popup-content a {
     left: 95%; }
   .form_welcome {
-    margin-top: 30px; } }
+    margin-top: 30px; }
+  .btn-xl {
+    width: 260px;
+    height: 55px;
+    line-height: 55px;
+    line-height: 55px !important;
+    padding: 0px !important; } }
 
 #scrollup {
   position: fixed;
@@ -1474,7 +1502,7 @@ body {
     width: 150px;
     margin-top: 5px; }
   .navbar-custom .nav li a {
-    font-size: 20px; } }
+    font-size: 18px; } }
 
 @media (max-width: 1141px) {
   .navbar-brand img {
@@ -1514,8 +1542,6 @@ body {
   .navbar-custom {
     padding-left: 0;
     padding-right: 0; }
-  .btn-xl {
-    padding: 24px 100px; }
   .form_subtitle {
     font-size: 30px; }
   .b-popup-content a {
@@ -1544,7 +1570,3 @@ body {
     font-size: 55px !important; }
   #mainNav #bs-example-navbar-collapse-1 ul li a {
     margin: 0 17px !important; } }
-
-@media (min-width: 768px) {
-  .intro-text .btn-xl {
-    padding: 24px 30px;	} }
