--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 // Global Components
 
 body {
+    text-align:center;
     overflow-x: hidden;
     @include body-font;
 }
@@ -634,7 +635,7 @@ aside.clients {
 
 section#contact {
     background-color: $gray-darker;
-    background-image: url('../img/map-image.png');
+    /*background-image: url('../img/map-image.png');*/
     background-position: center;
     background-repeat: no-repeat;
     .section-heading {
