--- a/scss/main.scss
+++ b/scss/main.scss
@@ -94,9 +94,7 @@ h1, h2, h3, h4, h5, h6 {
     .navbar-brand {
         color: $theme-primary;
         overflow: hidden;
-        padding-top: 0;
-        padding-bottom: 0;
-        margin: 15px 0;
+        padding: 0;
         display: inline-block;
         width: 237px; 
         height: 58px;
@@ -154,6 +152,13 @@ h1, h2, h3, h4, h5, h6 {
         background-color: darken($theme-primary, 10%);
     }
 }
+
+@media(min-width:768px) {
+    .navbar-brand{
+        margin: 15px 15px 15px 0;
+    }
+}
+
 @media(min-width:768px) {
     .navbar-custom {
         background-color: transparent;
@@ -163,6 +168,7 @@ h1, h2, h3, h4, h5, h6 {
         transition: padding 0.3s;
         border: none;
         .navbar-brand {
+            
             font-size: 2em;
             -webkit-transition: all 0.3s;
             -moz-transition: all 0.3s;
@@ -178,16 +184,13 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
 }
-@media(min-width:992px) and (max-width:1141px) {
-    .navbar-custom {
-         padding:36px 55px 0 55px;
-    } 
-}
+
 @media(min-width:768px) and (max-width:991px) {
     .navbar-custom {
         padding-left: 15px;
         padding-right: 15px;  
       .navbar-brand {
+            margin: 15px 15px 15px 0;
             background-size: 390px;
             width: 168px;
             height: 42px;
@@ -198,6 +201,16 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
 }
+
+@media(min-width:992px) and (max-width:1141px) {
+    .navbar-custom {
+         padding:36px 55px 0 55px;
+    } 
+     .navbar-brand{
+         margin: 15px 15px 15px 0;
+     }
+}
+
 // Navbar Change on Scroll
 
 @media(min-width:768px) {
