--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1559,6 +1559,9 @@ body {
 }
 
 #scrollup {
+    display:block; 
+    width: 15px;
+    height: 15px; 
     position: fixed;
     opacity: 0.8;
     padding: 10px;
