--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1559,12 +1559,10 @@ body {
 }
 
 #scrollup {
-    display:block; 
-    width: 15px;
-    height: 15px; 
+     
     position: fixed;
     opacity: 0.8;
-    padding: 10px;
+    padding: 15px;
     background: #aaa;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -1573,6 +1571,12 @@ body {
     bottom: 10px;
     display: none;
     cursor: pointer;
+
+    .icon{
+        display:block; 
+        width: 15px;
+        height: 15px;
+    }
 }
 
 @media(max-width: 590px){
